--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,12 @@
-GO_PORT=80
-RABBITMQ_DEFAULT_USER=guest
-RABBITMQ_DEFAULT_PASS=guest
-RABBITMQ_PORT=5672
-DB_HOST=mongo
-DB_PORT=27017
-DB_DATABASE=businessHub
+RABBITMQ_URI=amqp://guest:guest@rabbitmq:5672/
+MONGO_URI=mongodb://mongo:27017
+RABBITMQ_USER=guest
+RABBITMQ_PASW=guest
+MONGO_DATABASE=businessHub
+RABBITMQ_COMPANY_QUEUE=businesshub-logger
+WEBSOCKET_URL=ws://server:8080
+
+TARGET=prod
+APP_GOLANG_PORT=80
+SERVICE_GOLANG_PORT=81
+MONGO_EXTERNAL_PORT=27017
